--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Digital vinsamling med AI-funktioner" />
 
     <!-- Preconnect till Supabase för snabbare API-anrop -->
-    <link rel="preconnect" href="https://xrbhgxtlkjfbslqszvir.supabase.co" />
-    <link rel="dns-prefetch" href="https://xrbhgxtlkjfbslqszvir.supabase.co" />
+    <link rel="preconnect" href="https://vcawwvjfwaptojrswljn.supabase.co" />
+    <link rel="dns-prefetch" href="https://vcawwvjfwaptojrswljn.supabase.co" />
 
     <title>Min Vinsamling</title>
   </head>
